Solve p35